Cambios en README y en el nombre del proyecto en package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-full-calendar",
+  "name": "vue-fullcalendar-basic",
   "version": "2.7.0",
   "description": "FullCalendar wrapper for vue",
   "main": "index.js",
